--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "47b50e12",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import library\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,11 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "95f0a8e1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import model\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -37,11 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a75c3a3c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load data\n",
     "train = pd.read_csv('data/train.csv')\n",
     "test = pd.read_csv('data/test.csv')"
    ]
@@ -56,133 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "98696e8c",
+   "execution_count": null,
+   "id": "73930568",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Categorical columns: Index(['MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities',\n",
-      "       'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1', 'Condition2',\n",
-      "       'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl', 'Exterior1st',\n",
-      "       'Exterior2nd', 'MasVnrType', 'ExterQual', 'ExterCond', 'Foundation',\n",
-      "       'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2',\n",
-      "       'Heating', 'HeatingQC', 'CentralAir', 'Electrical', 'KitchenQual',\n",
-      "       'Functional', 'FireplaceQu', 'GarageType', 'GarageFinish', 'GarageQual',\n",
-      "       'GarageCond', 'PavedDrive', 'PoolQC', 'Fence', 'MiscFeature',\n",
-      "       'SaleType', 'SaleCondition'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "categorical_columns = train.select_dtypes(include=['object']).columns\n",
-    "print(\"Categorical columns:\", categorical_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "710d5c80",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Id                  0\n",
-       "MSSubClass          0\n",
-       "MSZoning            0\n",
-       "LotFrontage       259\n",
-       "LotArea             0\n",
-       "Street              0\n",
-       "Alley            1369\n",
-       "LotShape            0\n",
-       "LandContour         0\n",
-       "Utilities           0\n",
-       "LotConfig           0\n",
-       "LandSlope           0\n",
-       "Neighborhood        0\n",
-       "Condition1          0\n",
-       "Condition2          0\n",
-       "BldgType            0\n",
-       "HouseStyle          0\n",
-       "OverallQual         0\n",
-       "OverallCond         0\n",
-       "YearBuilt           0\n",
-       "YearRemodAdd        0\n",
-       "RoofStyle           0\n",
-       "RoofMatl            0\n",
-       "Exterior1st         0\n",
-       "Exterior2nd         0\n",
-       "MasVnrType        872\n",
-       "MasVnrArea          8\n",
-       "ExterQual           0\n",
-       "ExterCond           0\n",
-       "Foundation          0\n",
-       "BsmtQual           37\n",
-       "BsmtCond           37\n",
-       "BsmtExposure       38\n",
-       "BsmtFinType1       37\n",
-       "BsmtFinSF1          0\n",
-       "BsmtFinType2       38\n",
-       "BsmtFinSF2          0\n",
-       "BsmtUnfSF           0\n",
-       "TotalBsmtSF         0\n",
-       "Heating             0\n",
-       "HeatingQC           0\n",
-       "CentralAir          0\n",
-       "Electrical          1\n",
-       "1stFlrSF            0\n",
-       "2ndFlrSF            0\n",
-       "LowQualFinSF        0\n",
-       "GrLivArea           0\n",
-       "BsmtFullBath        0\n",
-       "BsmtHalfBath        0\n",
-       "FullBath            0\n",
-       "HalfBath            0\n",
-       "BedroomAbvGr        0\n",
-       "KitchenAbvGr        0\n",
-       "KitchenQual         0\n",
-       "TotRmsAbvGrd        0\n",
-       "Functional          0\n",
-       "Fireplaces          0\n",
-       "FireplaceQu       690\n",
-       "GarageType         81\n",
-       "GarageYrBlt        81\n",
-       "GarageFinish       81\n",
-       "GarageCars          0\n",
-       "GarageArea          0\n",
-       "GarageQual         81\n",
-       "GarageCond         81\n",
-       "PavedDrive          0\n",
-       "WoodDeckSF          0\n",
-       "OpenPorchSF         0\n",
-       "EnclosedPorch       0\n",
-       "3SsnPorch           0\n",
-       "ScreenPorch         0\n",
-       "PoolArea            0\n",
-       "PoolQC           1453\n",
-       "Fence            1179\n",
-       "MiscFeature      1406\n",
-       "MiscVal             0\n",
-       "MoSold              0\n",
-       "YrSold              0\n",
-       "SaleType            0\n",
-       "SaleCondition       0\n",
-       "SalePrice           0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape\n",
-    "train.isna().sum()"
+    "# cat column\n",
+    "cat_col = train.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "# NA column\n",
+    "na_col = train.columns[train.isna().sum() > 0]\n",
+    "\n",
+    "# NA column with meaning (from the description)\n",
+    "na_col_meaning = [\"Alley\", \"BsmtQual\", \"BsmtCond\", \"BsmtExposure\", \"BsmtFinType1\", \"BsmtFinType2\", \"FireplaceQu\", \"GarageType\", \"GarageFinish\", \"GarageQual\", \"GarageCond\", \"PoolQC\", \"Fence\", \"MiscFeature\"]\n",
+    "\n",
+    "# NA column meaning - all NA col\n",
+    "na_col_no_meaning = [col for col in na_col if col not in na_col_meaning]"
    ]
   },
   {
