--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 173,
       "id": "47b50e12",
       "metadata": {
         "id": "47b50e12"
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 174,
       "id": "95f0a8e1",
       "metadata": {
         "id": "95f0a8e1"
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 175,
       "id": "a75c3a3c",
       "metadata": {
         "id": "a75c3a3c"
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 176,
       "id": "73930568",
       "metadata": {
         "id": "73930568"
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 177,
       "id": "a3f7c76b",
       "metadata": {},
       "outputs": [],
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 178,
       "id": "2b953d63",
       "metadata": {
         "id": "2b953d63"
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 179,
       "id": "0e739f74",
       "metadata": {},
       "outputs": [],
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 180,
       "id": "f0c3744b",
       "metadata": {},
       "outputs": [],
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 181,
       "id": "85d8636e",
       "metadata": {},
       "outputs": [
@@ -240,7 +240,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 182,
+      "id": "a4eabfe8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#combine bathroom columns\n",
+        "train['No. of bathrooms']=train['BsmtFullBath']+0.5*train['BsmtHalfBath']+train['FullBath']+0.5*train['HalfBath']\n",
+        "test['No. of bathrooms']=test['BsmtFullBath']+0.5*test['BsmtHalfBath']+test['FullBath']+0.5*test['HalfBath']\n",
+        "train.drop(columns=['BsmtFullBath','BsmtHalfBath','FullBath','HalfBath'],inplace=True)\n",
+        "test.drop(columns=['BsmtFullBath','BsmtHalfBath','FullBath','HalfBath'],inplace=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 183,
       "id": "ce3e549f",
       "metadata": {
         "id": "ce3e549f"
@@ -250,17 +264,116 @@
         "from sklearn.impute import KNNImputer\n",
         "\n",
         "knn_imputer = KNNImputer(n_neighbors=5)  # adjust k as needed\n",
-        "train = knn_imputer.fit_transform(train)\n",
-        "test = knn_imputer.transform(test)"
+        "train = pd.DataFrame(knn_imputer.fit_transform(train), columns=train.columns)\n",
+        "test = pd.DataFrame(knn_imputer.transform(test), columns=test.columns)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 184,
+      "id": "b376fba7",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['Id', 'LotFrontage', 'LotArea', 'LotShape', 'LandContour', 'LandSlope',\n",
+              "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
+              "       'MasVnrArea', 'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond',\n",
+              "       'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2',\n",
+              "       'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'HeatingQC', '1stFlrSF',\n",
+              "       '2ndFlrSF', 'LowQualFinSF', 'GrLivArea', 'BedroomAbvGr', 'KitchenAbvGr',\n",
+              "       'KitchenQual', 'TotRmsAbvGrd', 'Functional', 'Fireplaces',\n",
+              "       'FireplaceQu', 'GarageYrBlt', 'GarageFinish', 'GarageCars',\n",
+              "       'GarageArea', 'GarageQual', 'GarageCond', 'PavedDrive', 'WoodDeckSF',\n",
+              "       'OpenPorchSF', 'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea',\n",
+              "       'PoolQC', 'Fence', 'MiscVal', 'MoSold', 'YrSold', 'SalePrice',\n",
+              "       'Street_Pave', 'Alley_Pave', 'CentralAir_Y', 'MasVnrType_BrkFace',\n",
+              "       'MasVnrType_Stone', 'MiscFeature_Othr', 'MiscFeature_Shed',\n",
+              "       'MiscFeature_TenC', 'BldgType_freq', 'SaleType_freq',\n",
+              "       'SaleCondition_freq', 'MSSubClass_freq', 'MSZoning_freq',\n",
+              "       'Neighborhood_freq', 'Condition1_freq', 'Condition2_freq',\n",
+              "       'LotConfig_freq', 'RoofStyle_freq', 'RoofMatl_freq', 'Exterior1st_freq',\n",
+              "       'Exterior2nd_freq', 'Foundation_freq', 'Heating_freq',\n",
+              "       'Electrical_freq', 'GarageType_freq', 'No. of bathrooms'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "execution_count": 184,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "train.columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 185,
+      "id": "9c31bf31",
+      "metadata": {
+        "id": "9c31bf31"
+      },
+      "outputs": [],
+      "source": [
+        "train = train.loc[:,['Id', 'LotFrontage', 'LotArea', 'LotShape', 'LandContour', 'LandSlope',\n",
+        "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
+        "       'MasVnrArea', 'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond',\n",
+        "       'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2',\n",
+        "       'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'HeatingQC', '1stFlrSF',\n",
+        "       '2ndFlrSF', 'LowQualFinSF', 'GrLivArea', 'BedroomAbvGr', 'KitchenAbvGr',\n",
+        "       'KitchenQual', 'TotRmsAbvGrd', 'Functional', 'Fireplaces',\n",
+        "       'FireplaceQu', 'No. of bathrooms', 'GarageYrBlt', 'GarageFinish', 'GarageCars',\n",
+        "       'GarageArea', 'GarageQual', 'GarageCond', 'PavedDrive', 'WoodDeckSF',\n",
+        "       'OpenPorchSF', 'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea',\n",
+        "       'PoolQC', 'Fence', 'MiscVal', 'MoSold', 'YrSold', 'SalePrice',\n",
+        "       'Street_Pave', 'Alley_Pave', 'CentralAir_Y', 'MasVnrType_BrkFace',\n",
+        "       'MasVnrType_Stone', 'MiscFeature_Othr', 'MiscFeature_Shed',\n",
+        "       'MiscFeature_TenC', 'BldgType_freq', 'SaleType_freq',\n",
+        "       'SaleCondition_freq', 'MSSubClass_freq', 'MSZoning_freq',\n",
+        "       'Neighborhood_freq', 'Condition1_freq', 'Condition2_freq',\n",
+        "       'LotConfig_freq', 'RoofStyle_freq', 'RoofMatl_freq', 'Exterior1st_freq',\n",
+        "       'Exterior2nd_freq', 'Foundation_freq', 'Heating_freq',\n",
+        "       'Electrical_freq', 'GarageType_freq']]\n",
+        "\n",
+        "test = test.loc[:,['Id', 'LotFrontage', 'LotArea', 'LotShape', 'LandContour', 'LandSlope',\n",
+        "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
+        "       'MasVnrArea', 'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond',\n",
+        "       'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2',\n",
+        "       'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'HeatingQC', '1stFlrSF',\n",
+        "       '2ndFlrSF', 'LowQualFinSF', 'GrLivArea', 'BedroomAbvGr', 'KitchenAbvGr',\n",
+        "       'KitchenQual', 'TotRmsAbvGrd', 'Functional', 'Fireplaces',\n",
+        "       'FireplaceQu', 'No. of bathrooms', 'GarageYrBlt', 'GarageFinish', 'GarageCars',\n",
+        "       'GarageArea', 'GarageQual', 'GarageCond', 'PavedDrive', 'WoodDeckSF',\n",
+        "       'OpenPorchSF', 'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea',\n",
+        "       'PoolQC', 'Fence', 'MiscVal', 'MoSold', 'YrSold', 'SalePrice',\n",
+        "       'Street_Pave', 'Alley_Pave', 'CentralAir_Y', 'MasVnrType_BrkFace',\n",
+        "       'MasVnrType_Stone', 'MiscFeature_Othr', 'MiscFeature_Shed',\n",
+        "       'MiscFeature_TenC', 'BldgType_freq', 'SaleType_freq',\n",
+        "       'SaleCondition_freq', 'MSSubClass_freq', 'MSZoning_freq',\n",
+        "       'Neighborhood_freq', 'Condition1_freq', 'Condition2_freq',\n",
+        "       'LotConfig_freq', 'RoofStyle_freq', 'RoofMatl_freq', 'Exterior1st_freq',\n",
+        "       'Exterior2nd_freq', 'Foundation_freq', 'Heating_freq',\n",
+        "       'Electrical_freq', 'GarageType_freq']]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 187,
+      "id": "57a6ce1d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train.to_csv('data/train_imputed.csv', index=False)\n",
+        "test.to_csv('data/test_imputed.csv', index=False)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "9c31bf31",
-      "metadata": {
-        "id": "9c31bf31"
-      },
+      "id": "e9c01042",
+      "metadata": {},
       "outputs": [],
       "source": []
     }
